   * deleteOutStream() :
     * now reference to stream pointer to ensure update of original pointer
   * E_INF = INTMAX / 8 (to ensure correct boundary checks in predictors)
 * IntaRNA/OutputStreamHandlerSortedCsv :
   * destructor() :
     * BUGFIX: double deletion of outstream (fixes #157)
 * IntaRNA/PredictorMfe2dSeed :
   * traceback() :
     * BUGFIX noLP traceback (fixes #153)

190808 Martin Raden :
 * renaming personality IntaRNAblock to IntaRNAhelix (since used in resp. paper)

190716 Martin Raden :
 * bin/CommandLineParsing :
   * IntaRNAexact :
     + model=X
     + exact accessibility computation (*AccW = *AccL = 0)

190716 Martin Raden :
 * IntaRNA/Accessibility :
   * decomposeByMaxED( ranges ) : 
     + additional parameter for minimal range length
 * bin/CommandLineParsing :
   - high memory warning disabled
   + set seedBP for minimal range length of range decomposition
 * IntaRNA/IndexRange :
   * overlappingWindows :
     * bugfix: check for non-ascending was not using "!isAscending()"

190607 Martin Raden :
 * IntaRNA/general :
   * deleteOutputStream() :
     - no warning if not a file stream (to support temporary stringstreams)
 * IntaRNA/OutputHandlerCsv :
   + colTypeNumericSort : list of types that need numerical sorting
   * notAvailable : now "NAN" (was "NA")
   - colOrder : renamed to columns
   + columns (former colOrder)
 + IntaRNA/OutputStreamHandler : generic handler to wrap the output stream
 + IntaRNA/OutputStreamHandlerSortedCsv : OSH that stores output in temporary
   stringstream to be finally sorted by the values of a given column
 * bin/CommandLineParsing :
   - outStream : replaced by outStreamHandler
   + outStreamHandler : central OutputStreamHandler object
   + outCsvColSep : CSV column separator
   + outCsvLstSep : CSV value-list separator 
   + outCsvSort : optional parameter to define the CSV column for sorting
   * destructor() :
     * outStream deletion
   * parse() :
     + parsing and setup CSV sorting